Rewriting - added helpful api routes

--- a/config/.env
+++ b/config/.env
@@ -7,6 +7,15 @@ MEDIA_LOCATION="media-local"
 CONFIG_LOCATION="config"
 SERVICES_LOCATION="services"
 MEDIA_VOLUME_MOUNT="media-local"
+SCANABLE_FILES_REGEX="jpg,png,gif,jpeg,heic,mov,mp4,tif,tiff,cr2,dng,mkv,3gp,webp,m4v,jpx"
+
+#################################################
+# REDIS
+#################################################
+REDIS_PORT="6381"
+REDIS_PASSWORD="f7Pmm^k5c6Tb!16aL9"
+REDIS_EXPIRATION_MEDIA=604800
+REDIS_CONFIG_FILE="/home/openphoto/redis.local.conf"
 
 #################################################
 # COMPREFACE
