--- a/src/api/package.json
+++ b/src/api/package.json
@@ -27,6 +27,7 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.0",
     "@types/mime": "^3.0.1",
+    "@types/mime-types": "^2.1.4",
     "@types/node": "^18.16.17",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
@@ -45,17 +46,22 @@
     "color": "^4.2.3",
     "color.js": "^1.2.0",
     "colors": "^1.4.0",
+    "connect-redis": "^7.1.1",
     "cors": "^2.8.5",
+    "dominant-color": "^0.0.1",
     "dotenv": "^16.0.3",
     "exifremove": "^1.0.1",
     "exiftool-vendored": "^25.2.0",
     "express": "^4.19.2",
     "filenamify": "^6.0.0",
     "jest": "^29.5.0",
+    "lodash": "^4.17.21",
     "microbundle": "^0.15.1",
     "mime": "^3.0.0",
     "moment": "^2.29.4",
     "native-querystring": "^1.1.1",
+    "node-exiftool": "^2.3.0",
+    "redis": "^4.6.13",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "sharp": "^0.33.3",
