--- a/src/explore-ui/package.json
+++ b/src/explore-ui/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.2.25",
     "axios": "^1.6.8",
     "exiftool-vendored": "^25.2.0",
+    "moment": "^2.30.1",
     "query-string": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,6 +22,7 @@
     "sass": "^1.75.0",
     "typescript": "^4.9.5",
     "use-query-params": "^2.2.1",
+    "use-selection-hook": "^1.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
