--- a/config/.env.local
+++ b/config/.env.local
@@ -2,6 +2,7 @@ ROOT_DIR="/home/openphoto"
 NODE_ENV="development"
 PHOTOGATE_ENV="local"
 LOCAL_HOST_IP="10.0.0.15"
+API_PORT="9447"
 CERTS_LOCATION="/certs"
 MEDIA_LOCATION="media-local"
 CONFIG_LOCATION="config"
