--- a/src/api/package.json
+++ b/src/api/package.json
@@ -13,9 +13,9 @@
   "unpkg": "./dist/index.umd.js",
   "scripts": {
     "prepare": "rm -rf dist && npm run build",
-    "build": "rm -rf dist && microbundle",
+    "build": "rm -rf dist && microbundle --format cjs,esm --target node",
     "build-local": "npm run build && cp $(npm pack | tail -n 1) ~",
-    "dev": "microbundle watch",
+    "dev": "microbundle --target node --format cjs,esm watch",
     "test": "jest ./src",
     "test:watch": "jest ./src --watchAll",
     "lint": "eslint ./src/**/* --ext .js,.jsx",
@@ -64,6 +64,7 @@
     "redis": "^4.6.13",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
+    "rollup-plugin-polyfill-node": "^0.13.0",
     "sharp": "^0.33.3",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.2",
