--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "@supercharge/fs": "^3.4.2",
+    "@types/node": "^20.12.12",
     "dotenv": "^16.4.5"
+  },
+  "devDependencies": {
+    "rollup-plugin-node-polyfills": "^0.2.1"
   }
 }
