Added database and updated resolvers

--- a/config/.env
+++ b/config/.env
@@ -2,17 +2,19 @@ ROOT_DIR="/home/openphoto"
 NODE_ENV="development"
 PHOTOGATE_ENV="local"
 LOCAL_HOST_IP="10.0.0.15"
+API_PORT="9447"
 CERTS_LOCATION="/certs"
 MEDIA_LOCATION="media-local"
 CONFIG_LOCATION="config"
 SERVICES_LOCATION="services"
 MEDIA_VOLUME_MOUNT="media-local"
+UPLOADS_DIR="/home/uploads"
 SCANABLE_FILES_REGEX="jpg,png,gif,jpeg,heic,mov,mp4,tif,tiff,cr2,dng,mkv,3gp,webp,m4v,jpx"
 
 #################################################
 # REDIS
 #################################################
-REDIS_PORT="6381"
+REDIS_PORT="6379"
 REDIS_PASSWORD="f7Pmm^k5c6Tb!16aL9"
 REDIS_EXPIRATION_MEDIA=604800
 REDIS_CONFIG_FILE="/home/openphoto/redis.local.conf"
@@ -24,13 +26,13 @@ COMPREFACE_CONTAINER_NAME="openphoto-compreface"
 COMPREFACE_DB_CONTAINER_NAME="openphoto-compreface-db"
 
 # General
-COMPREFACE_API_URL="http://10.0.0.15:8555"
-COMPREFACE_PORT="8555"
+COMPREFACE_API_URL="http://10.0.0.15:7000"
+COMPREFACE_PORT="7000"
 
 # Compreface API Keys
-COMPREFACE_RECOGNITION_KEY="66a0bd28-cc50-4754-b7f8-8265ff4c5faa"
-COMPREFACE_DETECTION_KEY="14c97fd2-ed25-48eb-a650-4fab973013cb"
-COMPREFACE_VERIFCATION_KEY="df78753b-7b96-433d-8fe7-7b98cada7aa0"
+COMPREFACE_RECOGNITION_KEY="b8ed9cce-edbb-449a-9fa4-7be06fa72f34"
+COMPREFACE_DETECTION_KEY="02080028-0e24-4d83-aae2-4eac830261ef"
+COMPREFACE_VERIFCATION_KEY="90028704-d6eb-4a5b-b88e-923a12c545c3"
 
 # Compreface URLs
 COMPREFACE_RECOGNITION_URI="/api/v1/recognition"
@@ -38,10 +40,23 @@ COMPREFACE_DETECTION_URI="/api/v1/detection"
 COMPREFACE_VERIFICATION_URI="/api/v1/verification"
 
 # Compreface Database
-COMPREFACE_EXTERNAL_DB="true"
+COMPREFACE_EXTERNAL_DB=true
 COMPREFACE_POSTGRES_DB="testdb"
 COMPREFACE_POSTGRES_USER="testuser"
 COMPREFACE_POSTGRES_PASSWORD="123"
 COMPREFACE_POSTGRES_URL="jdbc:postgresql://compreface-db:5432/testdb"
 COMPREFACE_SERVICE_DIR="compreface"
 COMPREFACE_DB_DIRECTORY="data"
+
+#################################################
+# API DATABASE
+#################################################
+MARIA_DB_CONTAINER_NAME="openphoto-db"
+MARIA_DB_HOST="10.0.0.15"
+MARIA_DB_PORT=3311
+MARIA_DB_ROOT_PASS="Dalekini21!"
+MARIA_DB_USER="openphoto"
+MARIA_DB_DATABASE="openphoto"
+MARIA_DB_PASSWORD="Dalekini21!"
+MARIA_DB_MOUNT_DIRECTORY="services/database/data"
+MARIA_DB_MIGRATE="services/database/"
