--- a/src/api/package.json
+++ b/src/api/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@photogate/api",
   "version": "0.0.1-alpha0",
-  "type": "module",
   "main": "./dist/index.cjs",
   "types": "./dist/index.d.ts",
+  "type": "module",
   "exports": {
     "types": "./lib/types",
     "require": "./dist/index.cjs",
@@ -29,6 +29,7 @@
     "@types/mime": "^3.0.1",
     "@types/mime-types": "^2.1.4",
     "@types/node": "^18.16.17",
+    "@types/request-promise": "^4.1.51",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
     "eslint": "^8.42.0",
@@ -41,6 +42,7 @@
   "dependencies": {
     "@colour-extractor/colour-extractor": "^1.0.1",
     "@rollup/plugin-commonjs": "^25.0.7",
+    "better-sqlite3": "^10.0.0",
     "body-parser": "^1.20.2",
     "chalk": "^4.1.2",
     "color": "^4.2.3",
@@ -55,6 +57,7 @@
     "express": "^4.19.2",
     "filenamify": "^6.0.0",
     "jest": "^29.5.0",
+    "knex": "^2.5.1",
     "lodash": "^4.17.21",
     "microbundle": "^0.15.1",
     "mime": "^3.0.0",
