--- a/config/.env
+++ b/config/.env
@@ -10,6 +10,7 @@ SERVICES_LOCATION="services"
 MEDIA_VOLUME_MOUNT="media-local"
 UPLOADS_DIR="/home/uploads"
 SCANABLE_FILES_REGEX="jpg,png,gif,jpeg,heic,mov,mp4,tif,tiff,cr2,dng,mkv,3gp,webp,m4v,jpx"
+LOGS_DIRECTORY="/home/openphoto/logs"
 
 #################################################
 # REDIS
