--- a/src/api/package.json
+++ b/src/api/package.json
@@ -15,7 +15,7 @@
     "prepare": "rm -rf dist && npm run build",
     "build": "rm -rf dist && microbundle --format cjs,esm --target node",
     "build-local": "npm run build && cp $(npm pack | tail -n 1) ~",
-    "dev": "microbundle --target node --format cjs,esm watch",
+    "dev": "microbundle --sourcemap=true --target node --format cjs,esm watch",
     "test": "jest ./src",
     "test:watch": "jest ./src --watchAll",
     "lint": "eslint ./src/**/* --ext .js,.jsx",
@@ -23,25 +23,28 @@
   },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
+    "@rollup/plugin-commonjs": "^25.0.8",
     "@types/color": "^3.0.3",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.0",
     "@types/mime": "^3.0.1",
     "@types/mime-types": "^2.1.4",
     "@types/node": "^18.16.17",
     "@types/request-promise": "^4.1.51",
+    "@types/source-map-support": "^0.5.10",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
     "eslint": "^8.42.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^5.0.1",
     "rollup": "^2.79.1",
+    "source-map-support": "^0.5.21",
     "typescript": "^5.1.3",
     "uglify-es": "^3.3.9"
   },
   "dependencies": {
     "@colour-extractor/colour-extractor": "^1.0.1",
-    "@rollup/plugin-commonjs": "^25.0.7",
     "better-sqlite3": "^10.0.0",
     "body-parser": "^1.20.2",
     "chalk": "^4.1.2",
@@ -50,12 +53,15 @@
     "colors": "^1.4.0",
     "connect-redis": "^7.1.1",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "dominant-color": "^0.0.1",
     "dotenv": "^16.0.3",
     "exifremove": "^1.0.1",
     "exiftool-vendored": "^25.2.0",
     "express": "^4.19.2",
     "filenamify": "^6.0.0",
+    "heic-convert": "^2.1.0",
+    "heic2any": "^0.0.4",
     "jest": "^29.5.0",
     "knex": "^2.5.1",
     "lodash": "^4.17.21",
